# app/Http/Controllers/API/BabyneedsController.php
@@ -27,12 +27,105 @@ class BabyneedsController extends Controller
      *         response=200,
      *         description="seccessful",
      *         @OA\JsonContent()
-     *     )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_page",
+     *         in="query",
+     *         description="current page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=1
+     *       )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_limit",
+     *         in="query",
+     *         description="max item in a page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=10
+     *        )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_search",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema (
+     *             type="string",
+     *       )
+     *    ),
+     *    @OA\Parameter(
+     *        name="_size",
+     *        in="query",
+     *        description="search by size",
+     *        required=false,
+     *        @OA\Schema(
+     *            type="string",
+     *       )
+     *    ),
+     *    @OA\Parameter(
+     *        name="_sort_by",
+     *        in="query",
+     *        description="word to search",
+     *        required=false,
+     *        @OA\Schema (
+     *            type="string",
+     *            example="latest"
+     *       )
+     *     ),
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        return Babyneed::get();
+        try {
+            $data['filter']       = $request->all();
+            $page                 = $data['filter']['_page']  = (@$data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
+            $limit                = $data['filter']['_limit'] = (@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
+            $offset               = ($page?($page-1)*$limit:0);
+            $data['products']     = Babyneed::whereRaw('1 = 1');
+            
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw('(LOWER(Nama) LIKE "%'.strtolower($request->get('_search')).'%")');
+            }
+            if($request->get('_size')){
+                $data['products'] = $data['products']->whereRaw('LOWER(size) = "'.strtolower($request->get('_size')).'"');
+            }
+            if($request->get('_sort_by')){
+            switch ($request->get('_sort_by')) {
+                default:
+                case 'latest_added':
+                $data['products'] = $data['products']->orderBy('created_at','DESC');
+                break;
+                case 'Nama_asc':
+                $data['products'] = $data['products']->orderBy('Nama','ASC');
+                break;
+                case 'Nama_desc':
+                $data['products'] = $data['products']->orderBy('Nama','DESC');
+                break;
+                case 'price_asc':
+                $data['products'] = $data['products']->orderBy('price','ASC');
+                break;
+                case 'price_desc':
+                $data['products'] = $data['products']->orderBy('price','DESC');
+                break;
+            }
+            }
+            $data['products_count_total']   = $data['products']->count();
+            $data['products']               = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset);
+            // $data['products_raw_sql']       = $data['products']->toSql();
+            $data['products']               = $data['products']->get();
+            $data['products_count_start']   = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
+            $data['products_count_end']     = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
+           return response()->json($data, 200);
+
+        } catch(\Exception $exception) {
+            throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
+        }
     }
 
     /**
@@ -58,7 +151,7 @@ class BabyneedsController extends Controller
      *              ref="#/components/schemas/Babyneed",
      *              example={ "nama": "DENIM JOGGERS SET", "size": "8 bulan",   "price": "15000", 
      *                        "description": "baju ini sangat nyaman dan tipis tidak membuat bayi keringatan",
-     *                        "image": "https://freepngimg.com/png/53976-baby-clothes-download-hq-png"            
+     *                        "image": "https://freepngimg.com/thumb/jeans/54011-8-baby-clothes-free-photo-png.png"            
      *              }
      *          ),
      *      ),
